--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,119 @@
+ul {
+	list-style: none;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+	sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+	monospace;
+}
+article{
+	padding: 1%;
+	align-items:center;
+	justify-content: center;
+}
+
+.stars {
+	color: gold;
+}
+
+.stars:hover {
+	color: goldenrod;
+}
+
+.top-search {
+	background-color: #212529 !important;
+	padding: 0 !important;
+	margin: 0 !important;
+	border-top: none !important;
+	border-left: none !important;
+	border-right: none !important;
+	border-bottom: 1px solid gray !important;
+	border-radius: 1px !important;
+}
+
+.beer-ul {
+	list-style: none;
+	display: flex;
+	flex-flow: column wrap;
+	align-items: flex-start;
+	
+}
+
+.beer-list {
+	display: inline-flex;
+	align-items: flex-start;
+	justify-content: space-between;
+}
+
+.modal-body {
+	padding-left: 0 !important;
+	background-color: #e5e5e5;
+}
+
+.description {
+	height: 50%;
+	
+}
+
+.food_pairing {
+	display: flex;
+	align-items:flex-start;
+	justify-content:center;
+	justify-self: center;
+	background-color: white;
+	box-shadow: 10px 10px 0 gold;
+	padding: 1%;
+	/*margin-top: 50%;*/
+}
+
+.modal-header {
+	background: linear-gradient(0deg, white 50%, black 50%);
+	border: none !important;
+}
+
+.image-beer {
+	position: relative;
+	display: flex;
+	flex: 0 1 auto;
+	justify-self: center;
+	width: clamp(10%, 30%, 50vw);
+	height: clamp(30vw, 40vw, 50vw);
+}
+
+.foot-ul {
+	display: inline-flex;
+	color: white
+}
+
+.foot {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: gold;
+}
+
+.abbinamenti{
+	padding-left:6%;
+}
+.right {
+	
+	background: radial-gradient(circle at center, gold,
+	transparent, transparent);
+	/*	clip-path: circle(20% at center );
+		
+		background-color: gold;*/
+	
+	/*	background: radial-gradient(circle at center, gold,
+		transparent, transparent);
+		*/
+	
 }
