--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,9 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-
+input{
+	color: white !important;
+}
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 	monospace;
@@ -40,6 +42,7 @@ article{
 }
 
 .top-search {
+	
 	background-color: #212529 !important;
 	padding: 0 !important;
 	margin: 0 !important;
